<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_home_fragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/app_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/you_can_track_your_mobile"
                android:textColor="#000"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tv_open_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/click_here_to_view_your_device_location"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <com.example.oneclicktravel.mtplview.MtplButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_weather"
                android:text="@string/weather"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textColor="#FF0000"
                android:textSize="@dimen/font_20dp"
                android:background="@drawable/signup_input"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>